try to fix bold font on ios homescreen bookmark

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ body {
   font-family: "PT Sans", serif;
   font-size: 100%;
   font-weight: 400;
+  font-style: normal;
   line-height: 1.4;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
